--- a/plot/spectrum-plot.vbproj
+++ b/plot/spectrum-plot.vbproj
@@ -219,15 +219,15 @@
       <Project>{2dd4be80-ddc3-4767-94a7-10f1c3395716}</Project>
       <Name>MIME-htmls</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\zlibnet\src\zlibnet.vbproj">
+    <ProjectReference Include="..\zlibnet\src\zlibnet.vbproj">
       <Project>{075e1da3-54ac-4d7c-9d4e-e34aa13910a8}</Project>
       <Name>zlibnet</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\MwtWinDll\MwtWinDll.Extensions\MwtWinDll.Extensions.vbproj">
+    <ProjectReference Include="..\MwtWinDll\MwtWinDll.Extensions\MwtWinDll.Extensions.vbproj">
       <Project>{1b7c8c1b-b794-4f0a-8d6c-0f32f6d4e927}</Project>
       <Name>MwtWinDll.Extensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\MwtWinDll\MwtWinDll\MwtWinDll.vbproj">
+    <ProjectReference Include="..\MwtWinDll\MwtWinDll\MwtWinDll.vbproj">
       <Project>{78332537-7ecc-4b74-8aa9-ba66ab296af0}</Project>
       <Name>MwtWinDll</Name>
     </ProjectReference>
@@ -235,13 +235,9 @@
       <Project>{075e1da3-54ac-4d7c-9d4e-e34aa13910a8}</Project>
       <Name>zlibnet</Name>
     </ProjectReference>
-    <ProjectReference Include="..\assembly\assembly.vbproj">
+    <ProjectReference Include="..\Assembly\assembly\assembly.vbproj">
       <Project>{95f7d65e-9db1-4605-9fd3-25433277af88}</Project>
       <Name>assembly</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Massbank\MSMS.Assembly.vbproj">
-      <Project>{a686bdf5-077f-47f5-a8dd-c73e6e88363c}</Project>
-      <Name>MSMS.Assembly</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
