--- a/Assembly/test/test/test.vbproj
+++ b/Assembly/test/test/test.vbproj
@@ -106,6 +106,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Architecture.Framework\+Microsoft.VisualBasic.Architecture.Framework.vbproj">
+      <Project>{FECCE1FD-E1D4-49E3-A668-60BB5E7AED99}</Project>
+      <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\assembly\assembly.vbproj">
       <Project>{95F7D65E-9DB1-4605-9FD3-25433277AF88}</Project>
       <Name>assembly</Name>
