--- a/DATA/ms2_simulator/ms2_simulator.vbproj
+++ b/DATA/ms2_simulator/ms2_simulator.vbproj
@@ -148,6 +148,10 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Assembly\assembly\assembly.vbproj">
+      <Project>{95F7D65E-9DB1-4605-9FD3-25433277AF88}</Project>
+      <Name>assembly</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\KCF\KCF.Graph\KCF.Graph.vbproj">
       <Project>{c60416d4-b3e2-45e5-bfe0-90d5021647f9}</Project>
       <Name>KCF.Graph</Name>
