--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -149,6 +149,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\..\smartnucl_integrative\biodeepDB\METLINApp\packages\System.ValueTuple.4.4.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -174,6 +175,7 @@
     <Compile Include="lipidMAPS\SDF.vb" />
     <Compile Include="MoNA\MoNAJson.vb" />
     <Compile Include="NCBI\PubChem\MetaData.vb" />
+    <Compile Include="NCBI\PubChem\ImageFly.vb" />
     <Compile Include="SDF\Extensions.vb" />
     <Compile Include="TMIC\FooDB\compounds.vb" />
     <Compile Include="TMIC\FooDB\compounds_enzymes.vb" />
